--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,59 @@
-#root {
+/* /* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+
+:root{width:100%;height:100%}
+
+
+header{background-color: blue;height: 100px;position: fixed;width: 100%;}
+
+
+
+
+/* :root {
+  display: grid;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color:tan;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  height:100%; */
+  /* max-width: 644px; */
+
+/* } */
+/* table,td,tr,th{border: 2px solid black;}
+table#tableInfo{position: absolute;top:200px ;width: fit-content;} */
+
+
+
+/* div#root{display:grid ; max-width: 700px;} */
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+a:hover {
+  color: #535bf2;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+/* body{height:100%;display: grid;} */
+
+/* div#root{height:100%};
+ th{text-align: center;} */
+
+
 
 @keyframes logo-spin {
   from {
@@ -39,4 +76,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} 
