added singleTransaction Component with Fetch

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ a:hover {
 .single-Transact{padding:5px;border:3px solid white}
 #company{text-align: center;}
 #amount{margin-left:500px;}
-
+.single{margin-top: 200px;}
 /* body {
   margin: 0;
   display: flex;
