--- a/src/index.css
+++ b/src/index.css
@@ -87,12 +87,15 @@ a:hover {
 #transaction{margin-top: 200px; border:2px solid whitesmoke}
 .single-Transact{padding:5px;border:3px solid white}
 #company{text-align: center;}
-#amount{margin-left:500px;}
+#amount{margin-left:150px;}
 .single{margin-top: 200px;border:2px solid white;border-radius: 15px;}
 #single-amount{margin-left:175px;margin-top: 100px;}
 #single-company,#single-name{margin-top: 100px;margin-left: 50px;}
-#single-date{margin-left: 150px;}
+#single-date{margin-left: 400px;}
 #accountBalance{text-align: center;}
+.green{color:lightgreen}
+.default{color:white}
+
 /* body {
   margin: 0;
   display: flex;
