--- a/src/index.css
+++ b/src/index.css
@@ -27,23 +27,24 @@ header{background-color: lightcoral;height: 175px;position: fixed;width: 100%;}
 
 #head{margin-top: 25px;}
 #new-Log{position:absolute; top:25px; right:10px;width:100px;height:50px; }
-button#new-Log{color: aqua;}
+button#new-Log{color: aqua;background-color: white;}
 #container{height:100vh}
 #label{margin-top: 100px;}
 td{text-align: center;}
 form{margin-top: 100px; border :2px solid white;border-radius: 50px;}
 Link:hover{color: whitesmoke}
-
+button#new-Log{border-radius: 20%;}
 button#new-Log> a {
-  color: white;
+  color: black;
   background-color: transparent;
   text-decoration: none;
+  ;
 }
 button#new-Log> a:hover{color:purple}
-
-button#home-button>a{color: white;
+button#home-button{border-radius: 25%;}
+button#home-button>a{color: black;
   background-color: transparent;
-  text-decoration: none;}
+  text-decoration: none; background-color: white; border-radius: 200px;}
   button#home-button> a:hover{color:purple}
 :root {
   display: grid;
@@ -53,7 +54,7 @@ button#home-button>a{color: white;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color:blueviolet;
+  background-color:darkslateblue;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -114,7 +115,9 @@ div#bal{margin-top: 200px;text-align: center;}
 
 div#headerBal{text-align: center;}
 #backButton{width: 100px;}
+#transaction-specific{margin-left:100px}
 /* #headerBal{margin-left: 200x;margin-left: 500px;} */
+button#backButton2{margin-top: 200px;width:25%;height:50px}
 
 
 /* body {
