--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* /* #root {
+/* /* /* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -6,11 +6,11 @@
 } */
 
 
-:root{width:100%;height:100%}
+/* :root{width:100%;height:100%}
 
 
 header{background-color: blue;height: 100px;position: fixed;width: 100%;}
-
+ */
 
 
 
@@ -40,14 +40,14 @@ table#tableInfo{position: absolute;top:200px ;width: fit-content;} */
 
 /* div#root{display:grid ; max-width: 700px;} */
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 /* body{height:100%;display: grid;} */
 
 /* div#root{height:100%};
@@ -55,7 +55,7 @@ a:hover {
 
 
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -76,4 +76,4 @@ a:hover {
 
 .read-the-docs {
   color: #888;
-} 
+}  */ 
